--- a/android/smartcaravan/package.json
+++ b/android/smartcaravan/package.json
@@ -18,6 +18,9 @@
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
+    "@shopify/react-native-skia": "^1.2.3",
+    "@types/d3": "^7.4.3",
+    "d3": "^7.9.0",
     "react": "18.2.0",
     "react-native": "0.73.7",
     "react-native-ble-manager": "^11.5.1",
