--- a/android/smartcaravan/package.json
+++ b/android/smartcaravan/package.json
@@ -24,6 +24,7 @@
     "react": "18.2.0",
     "react-native": "0.73.7",
     "react-native-ble-manager": "^11.5.1",
+    "react-native-orientation-locker": "^1.7.0",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
     "react-native-svg": "^15.2.0"
