--- a/android/smartcaravan/android/app/src/main/AndroidManifest.xml
+++ b/android/smartcaravan/android/app/src/main/AndroidManifest.xml
@@ -11,13 +11,16 @@
       android:label="@string/app_name"
       android:icon="@mipmap/ic_launcher"
       android:allowBackup="false"
-      android:theme="@style/AppTheme">
+      android:theme="@style/AppTheme"
+      >
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
         android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|screenSize|smallestScreenSize|uiMode"
         android:launchMode="singleTask"
         android:windowSoftInputMode="adjustResize"
+        android:screenOrientation="portrait"
+
         android:exported="true">
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
