--- a/android/smartcaravan/ios/Podfile
+++ b/android/smartcaravan/ios/Podfile
@@ -25,7 +25,7 @@ if linkage != nil
   use_frameworks! :linkage => linkage.to_sym
 end
 
-target 'smartcaravan' do
+target 'smartcaravan2' do
   config = use_native_modules!
 
   use_react_native!(
@@ -39,7 +39,7 @@ target 'smartcaravan' do
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
-  target 'smartcaravanTests' do
+  target 'smartcaravan2Tests' do
     inherit! :complete
     # Pods for testing
   end
