--- a/android/smartcaravan/ios/smartcaravan.xcodeproj/xcshareddata/xcschemes/smartcaravan.xcscheme
+++ b/android/smartcaravan/ios/smartcaravan.xcodeproj/xcshareddata/xcschemes/smartcaravan.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "smartcaravan.app"
-               BlueprintName = "smartcaravan"
-               ReferencedContainer = "container:smartcaravan.xcodeproj">
+               BuildableName = "smartcaravan2.app"
+               BlueprintName = "smartcaravan2"
+               ReferencedContainer = "container:smartcaravan2.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "smartcaravanTests.xctest"
-               BlueprintName = "smartcaravanTests"
-               ReferencedContainer = "container:smartcaravan.xcodeproj">
+               BuildableName = "smartcaravan2Tests.xctest"
+               BlueprintName = "smartcaravan2Tests"
+               ReferencedContainer = "container:smartcaravan2.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "smartcaravan.app"
-            BlueprintName = "smartcaravan"
-            ReferencedContainer = "container:smartcaravan.xcodeproj">
+            BuildableName = "smartcaravan2.app"
+            BlueprintName = "smartcaravan2"
+            ReferencedContainer = "container:smartcaravan2.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "smartcaravan.app"
-            BlueprintName = "smartcaravan"
-            ReferencedContainer = "container:smartcaravan.xcodeproj">
+            BuildableName = "smartcaravan2.app"
+            BlueprintName = "smartcaravan2"
+            ReferencedContainer = "container:smartcaravan2.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
